Update assets with partyline branding

--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,5 @@
-@import "../node_modules/bootstrap/less/bootstrap.less";
-@import "../node_modules/bootstrap/less/mixins/border-radius.less";
+@import "bootstrap/bootstrap.less";
+@import "bootstrap/mixins/border-radius.less";
 
 html, body {
   height: 100%;
