--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -360,6 +360,10 @@ blockquote {
 	font-size:2.4rem;
 	padding:0 20px
 }
+.subitle {
+    font-size:16px;
+	font-style:italic;
+}
 .pullquote {
 	text-align:center;
 	line-height:48px;
@@ -701,50 +705,6 @@ width:220px
 font-size:.9rem;
 	transform:translateY(-1px)
 }
-.alt-home .sidebar {
-	background:#F9F9F9;
-	height:auto;
-	border-right:solid 2px #D8D8D8;
-	padding:15px 15px 5px 50px
-}
-@media (min-width:992px) {
-.alt-home .sidebar {
-height:100%;
-overflow-y:scroll
-}
-}
-.alt-home .sidebar .sub-nav {
-	border-color:#D8D8D8;
-	margin:70px 30px 20px 0
-}
-.alt-home .sidebar .sub-nav a {
-	margin-right:0
-}
-.alt-home .sub-nav {
-	text-align:right
-}
-@media (min-width:992px) {
-.alt-home .sub-nav {
-margin:70px 0 0
-}
-}
-.alt-home .alt-main {
-	padding:15px
-}
-.alt-home .post {
-	padding:10px 0
-}
-.alt-home .post .post-preview h2 {
-	line-height:1
-}
-.alt-home .post .post-preview h2 a {
-	font-size:22px;
-	font-size:2.2rem
-}
-.alt-home .post .post-preview a {
-	font-size:16px;
-	font-size:1.6rem
-}
 .hero-image-404 {
 	position:fixed;
 	top:0;
@@ -770,91 +730,6 @@ margin:70px 0 0
 	text-align:center;
 	font-size:18px;
 	font-size:1.8rem
-}
-.no-js-menu ul {
-	padding:10px 0;
-	margin-bottom:0
-}
-.no-js-menu li {
-	margin:0;
-	padding:3px 0;
-	list-style:none
-}
-@media (min-width:768px) {
-.no-js-menu li {
-padding:5px 0
-}
-}
-@media (min-width:992px) {
-.no-js-menu li {
-padding:10px 0
-}
-}
-.no-js-menu li i {
-	padding:0 20px;
-	color:#DADADA;
-	font-style:normal;
-	font-size:14px;
-	font-size:1.4rem
-}
-.no-js-menu li a {
-	color:#DADADA;
-	font-family:"Source Sans Pro", Helvetica, Arial, sans-serif;
-	font-weight:700;
-	border-bottom:0 transparent;
-	font-size:12px;
-	font-size:1.2rem
-}
-.no-js-menu li a:hover {
-	border-bottom:none;
-	color:#fff
-}
-.hero-image .no-js-menu {
-	padding-left:50px
-}
-.no-js .sidebar {
-	height:400px
-}
-@media (min-width:768px) {
-.no-js .sidebar {
-height:450px
-}
-}
-@media (min-width:992px) {
-.no-js .sidebar {
-width:400px;
-height:100%;
-position:fixed;
-background-color:#f5f5f5
-}
-}
-@media (min-width:1200px) {
-.no-js .sidebar {
-width:464px
-}
-}
-.no-js .site-info {
-	padding:0 15px
-}
-@media (min-width:768px) {
-.no-js .site-info {
-padding:0 100px
-}
-}
-@media (min-width:992px) {
-.no-js .site-info {
-padding:0 20px;
-position:absolute;
-bottom:40px
-}
-}
-@media (min-width:1200px) {
-.no-js .site-info {
-padding:0 30px
-}
-}
-.no-js-dashboard {
-	margin-top:60px
 }
 .left-container {
 	margin-left:15px;
