--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -779,3 +779,16 @@ a:active, a:focus, a:hover {
 	color:#333;
 	border-bottom:solid 1px #999
 }
+pre {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    word-break: break-all;
+    word-wrap: break-word;
+    color: #333;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
