Update button color

--- a/blog/css/main.css
+++ b/blog/css/main.css
@@ -167,7 +167,7 @@ font-size:1.6rem
 }
 .btn-default {
 	padding:10px 15px;
-	background:#fafafa;
+	background:#FFEC90;
 	border-bottom:1px solid rgba(0, 0, 0, .1);
 	text-shadow:0 0 0;
 	border-radius:4px
